<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.whazzup.slicing.QuestioningActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/description_margin_bottom"
        android:layout_marginEnd="@dimen/description_margin_horizontal"
        android:layout_marginStart="@dimen/description_margin_horizontal"
        android:layout_weight="2"
        android:gravity="bottom|center_horizontal"
        android:paddingEnd="@dimen/description_padding_horizontal"
        android:paddingStart="@dimen/description_padding_horizontal"
        android:text="@string/temp_text"
        android:textColor="@color/color_outer"
        android:textSize="@dimen/text_title_size" />

    <Button
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:clickable="false"
        android:maxWidth="@dimen/question_maxwidth"
        android:paddingEnd="@dimen/question_padding_horizontal"
        android:paddingStart="@dimen/question_padding_horizontal"
        android:text="@string/question_example"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        android:transitionName="@string/transition_question" />

    <LinearLayout
        android:id="@+id/answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/answer_margin"
            android:background="@drawable/button_small"
            android:text="Да"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/answer_margin"
            android:background="@drawable/button_small"
            android:text="Нет"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

</LinearLayout>